add the extra web server type

--- a/puppet.conf
+++ b/puppet.conf
@@ -6,6 +6,8 @@ vardir=/var/lib/puppet
 ssldir=/var/lib/puppet/ssl
 rundir=/run/puppet
 
+hiera_config=$confdir/hiera/hiera.yaml
+
 # separate out the CA from the rest of the ssl junk so that we can keep it as a separate git repo
 cadir=/etc/puppet/ca
 
